<resources>
    <string name="app_name">安卓玩</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">你好</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="str_login">登录</string>
    <string name="str_register">注 册</string>
    <string name="str_for_get">忘记密码?</string>
    <string name="str_hello_world">hello world!!</string>
    <string name="str_please_enter_password">请输入密码</string>
    <string name="str_please_enter_username">请输入用户名</string>
    <string name="str_home">首页</string>
    <string name="str_picture">图片</string>
    <string name="str_date">日期</string>
    <string name="str_author">作者?</string>
    <string name="str_no_data">没有数据</string>
    <string name="str_loading">加载中</string>
    <string name="str_personal_integral">个人积分</string>
    <string name="str_my_shard">我的分享</string>
    <string name="str_title">标题</string>
    <string name="str_search">搜索</string>
    <string name="str_submit">提交</string>
    <string name="str_article_link">文章地址</string>
    <string name="str_sticky">置顶</string>
    <string name="str_wx_session">微信</string>
    <string name="str_wx_time_line">朋友圈</string>
    <string name="str_welcome_back">一个专业的Android社区</string>
    <string name="AndroidFunny">安卓玩</string>
    <string name="str_please_enter_title">请输入标题</string>
    <string name="str_please_enter_address">请输入地址</string>
</resources>
