<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <variable
            name="events"
            type="com.ldc.wandroid.fragments.RegisterFragment.Events" />
    </data>

    <RelativeLayout

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.RegisterFragment">

        <include
            android:id="@+id/topBar"
            layout="@layout/top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topBar"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10">

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_edit_bg"
                android:hint="@string/str_please_enter_username"
                android:minHeight="@dimen/dp_50"
                android:paddingStart="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_5"
                android:singleLine="true"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/input_edit_bg"
                android:hint="@string/str_please_enter_password"
                android:inputType="textVisiblePassword"
                android:minHeight="@dimen/dp_50"
                android:paddingStart="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_5"
                android:singleLine="true"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:id="@+id/et_user_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/input_edit_bg"
                android:hint="@string/str_please_enter_password"
                android:inputType="textVisiblePassword"
                android:minHeight="@dimen/dp_50"
                android:paddingStart="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_5"
                android:singleLine="true"
                android:textSize="@dimen/sp_15" />

            <Button
                android:id="@+id/btn_register"
                style="@style/font_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:background="@drawable/btn_login_bg"
                android:onClick="@{(v)->events.btn_register(v)}"
                android:text="@string/str_register"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>


    </RelativeLayout>
</layout>